# steersuite-rutgers

./: CMakeLists.txt  PursuitEvade.xml  SocialForcesAIModule.cpp  SocialForcesAgent.cpp
collisionAI/: CMakeLists.txt
collisionAI/include/: CollisionAIModule.h  CollisionAgent.h
collisionAI/src/: CollisionAIModule.cpp  CollisionAgent.cpp
curveAI/: CMakeLists.txt
curveAI/include/: CurveAIModule.h  CurveAgent.h
curveAI/src/: CurveAIModule.cpp  CurveAgent.cpp
navmeshBuilder/src/: Mesh.cpp  NavMeshModule.cpp
scenario/include/: ScenarioModule.h
scenario/src/: ScenarioModule.cpp
searchAI/: CMakeLists.txt
searchAI/include/: SearchAIModule.h  SearchAgent.h
searchAI/src/: SearchAIModule.cpp  SearchAgent.cpp
socialForcesAI/include/: SocialForcesAgent.h  SocialForces_Parameters.h
socialForcesAI/src/: SocialForcesAgent.cpp
steerstats/: .gitignore  InsertStatistics.py  OptimizeAlgorithm.m  OptimizeAlgorithm.py  README.txt  ScenarioSpace.py  StatsSampleParameters.py  SteerStats.py  __init__.py  clearOldStatFiles  example_MINLPc.py  runOptimizationsNew.sh  runStats  runStatsTest  runTests.py  run_sims.sh  run_steersim.py  runtests  test.xml
testcases/: .curve1.xml.swp  .curve5.xml.swo  .curve5.xml.swp  crowd_crossing.xml  curve1.xml  curve2.xml  curve3.xml  curve4.xml  curve5.xml  curve5.xml.bak  curve6.xml  curve6.xml.bak  curveG16.xml  find_way.xml  hallway-four-way-rounded-roundabout.xml  maze.xml  myCurve_A1.xml  myCustomCurve.xml  mycurve.xml  plane_egress.xml  plane_ingress.xml  polygons1.xml  polygons2-Fix.xml  polygons2.xml  polygons3.xml  polygons_test.xml  search-1.xml  search-2.xml  test_pursue.xml  test_queueing.xml  wall_follower.xml
(+206 files in other folders)
